# crates-io-cli

./: .clog.toml  .gitignore  .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md  appveyor.yml  changelog.md
.github/workflows/: release.yml  rust.yml
criner/: Cargo.toml  README.md
criner/src/: engine.rs  error.rs  lib.rs  model.rs  persistence.rs  utils.rs
criner/src/engine/: changes.rs  mod.rs  tasks.rs  worker.rs  workers.rs
prodash/: Cargo.toml  README.md
prodash/benches/: usage.rs
prodash/examples/: dashboard.rs
prodash/src/: config.rs  lib.rs  tree.rs
prodash/src/tui/: engine.rs  mod.rs  utils.rs
prodash/src/tui/draw/: all.rs  information.rs  messages.rs  mod.rs  tasks.rs
progress-dashboard/: Cargo.toml  README.md
progress-dashboard/benches/: usage.rs
progress-dashboard/examples/: dashboard.rs
progress-dashboard/src/: config.rs  lib.rs  tree.rs  tui.rs
progress-dashboard/src/tui/: draw.rs  engine.rs  mod.rs  utils.rs
progress-dashboard/src/tui/draw/: messages.rs  mod.rs  tasks.rs
src/: args.rs  http_utils.rs  lib.rs  main.rs  structs.rs  utils.rs
src/asciinema/: recent-changes-json-output.json  recent-changes.json  search-open.json  search.json
src/scmds/: mod.rs  recents.rs  search.rs
src/scmds/list/: by_user.rs  cmd.rs  error.rs  mod.rs  response.rs
src/scmds/recents/: cmd.rs  error.rs  mod.rs  oneshot.rs
src/scmds/search/: error.rs  interactive.rs  mod.rs  structs.rs
tests/: journey-tests.sh
tests/fixtures/: byrons-crates.json
