[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Interact with crates.io from the command-line"
keywords = ["crates", "search", "diff", "cli", "mine"]
name = "crates-io-cli"
license = "MIT"
repository = "https://github.com/Byron/crates-io-cli"
readme = "README.md"
edition = "2018"
version = "4.0.1"
include = ["src/**/*", "LICENSE.md", "README.md", "changelog.md"]

[[bin]]
name = "crates"
path = "src/main.rs"
doctest = false

[features]
default = ["mine", "utility"]
mine = ["criner-cli"]
utility = ["list", "recent-changes", "search"]
recent-changes = ["crates-index-diff", "parking_lot"]
list =   ["curl", "futures", "tokio-core", "tokio-curl", "urlencoding"]
search = ["curl", "futures", "tokio-core", "tokio-curl", "urlencoding", "open"]


[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
prettytable-rs = { version = "0.10.0", features = ["win_crlf"], default-features = false }
thiserror = "1.0.39"

serde_json = "1.0.45"
serde = "1.0.104"
serde_derive = "1.0.104"

# criner
criner-cli = { version = "0.3.1", optional = true }


# recent-changes
parking_lot = { version = "0.12.1", optional = true }
crates-index-diff = { version = "16.0.1", optional = true }

# search
open = { version = "4.0.0", optional = true }

# search + list
curl = { version = "0.4.25", optional = true }
futures = { version = "0.1.7", optional = true }
tokio-core = { version = "0.1.2", optional = true }
tokio-curl = { version = "0.1.7", optional = true }
urlencoding = { version = "2.1.2", optional = true }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime", "auto-color"] }

[target."cfg(unix)".dependencies]
termion = "2.0.1"

# Turn on when needed to have faster debug builds
[profile.dev.package."*"]
debug = false
opt-level = 2

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
overflow-checks = true
