[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
description = "Interact with crates.io from the command-line"
keywords = ["crates", "search", "diff", "cli", "mine"]
name = "crates-io-cli"
license = "MIT"
repository = "https://github.com/Byron/crates-io-cli"
readme = "README.md"
edition = "2024"
version = "4.0.3"
include = ["src/**/*", "LICENSE.md", "README.md", "changelog.md"]

[[bin]]
name = "crates"
path = "src/main.rs"
doctest = false

[features]
default = ["mine", "utility"]
mine = ["criner-cli"]
utility = ["list", "recent-changes", "search"]
recent-changes = ["crates-index-diff", "parking_lot"]
list =   ["curl", "urlencoding"]
search = ["curl", "urlencoding", "open"]


[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
prettytable-rs = { version = "0.10.0", features = ["win_crlf"], default-features = false }
thiserror = "2.0.18"

serde_json = "1.0.150"
serde = "1.0.228"
serde_derive = "1.0.228"

# criner
criner-cli = { version = "0.4.1", optional = true }


# recent-changes
parking_lot = { version = "0.12.5", optional = true }
crates-index-diff = { version = "31.0.0", optional = true }

# search
open = { version = "5.3.5", optional = true }

# search + list
curl = { version = "0.4.50", optional = true }
urlencoding = { version = "2.1.3", optional = true }
env_logger = { version = "0.11.10", default-features = false, features = ["humantime", "auto-color"] }

[target."cfg(unix)".dependencies]
termion = "4.0.6"

# Turn on when needed to have faster debug builds
[profile.dev.package."*"]
debug = false
opt-level = 2

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1
overflow-checks = true
