[package]
name = "criner"
version = "0.1.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
quick-error = "1.2.3"
crates-index-diff = "5.0.4"
sled = { version = "0.31.0", features = ["compression"] }
async-std = { version = "1.4.0", features = ["unstable"] }
rmp-serde = "0.14.0"
humantime = "2.0.0"
log = "0.4.8"
serde_derive = "1.0.104"
serde = "1.0.104"
futures = "0.3.4"
futures-timer = "3.0.1"
