[package]
name = "progress-dashboard"
version = "0.1.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "A dashboard for highly asynchronous and possibly blocking tasks"
edition = "2018"
publish = false
include = ["src/**/*", "Cargo.*"]
license = "MIT"
repository = "https://github.com/Byron/crates-io-cli-rs"
readme = "README.md"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = "3.4.3"

[dev-dependencies]
futures = { version = "0.3.4", features = ["thread-pool"] }
futures-timer = "3.0.1"
rand = "0.7.3"
log = "0.4.8"
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }

