[package]
name = "progress-dashboard"
version = "0.1.0"
authors = ["Sebastian Thiel <sebastian.thiel@icloud.com>"]
description = "A dashboard for highly asynchronous and possibly blocking tasks"
edition = "2018"
publish = false
include = ["src/**/*", "Cargo.*"]
license = "MIT"
repository = "https://github.com/Byron/crates-io-cli-rs"
readme = "README.md"

[lib]
doctest = false

[features]
default = ["tui-renderer"]
tui-renderer = ["tui", "tui-react", "termion", "futures-timer", "futures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dashmap = "3.4.3"
parking_lot = "0.10.0"
log = "0.4.8"

# tui-renderer
tui = { version = "0.8.0", optional = true }
tui-react = { version = "0.2.0", optional = true }
termion = { version = "1.5.5", optional = true }
futures-timer = { version = "3.0.1", optional = true }
futures = { version = "0.3.4", optional = true }

[dev-dependencies]
futures = { version = "0.3.4", features = ["thread-pool"] }
futures-timer = "3.0.1"
rand = "0.7.3"
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "atty", "humantime"] }
